# LR8_DOP

./: Functions.cpp  Functions.h  Struct.h  main  main.cpp
Task_1/: CMakeCache.txt  CMakeLists.txt  Functions.cpp  Functions.h  Makefile  Struct.h  cmake_install.cmake  main  main.cpp
Task_2/: CMakeCache.txt  CMakeLists.txt  Makefile  Struct.h  cmake_install.cmake  main.cpp
